--- a/_config.yml
+++ b/_config.yml
@@ -145,6 +145,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jekyll-seo-tag
   - jekyll-redirect-from
 # mimic GitHub Pages with --safe
 whitelist:
