--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,10 @@ main:
   - title: "News"
     url: "/#-news"
 
+  - title: "Blog"
+    url: "/blog/"
+    external: false
+
   - title: "Publications"
     url: "/#-publications"
 
@@ -20,3 +24,7 @@ main:
 
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "resume"
+    url: "/#-resume"
+    external: true
